@@ -1,7 +1,8 @@
 Cultibox (1.1.17) precise; urgency=low
     + Correction du calendrier: les evènements sur deux mois fonctionnent à nouveau
     + Les accents dans les fichiers calc sont maintenant bien pris en compte
-    + ajout d'un champ color possible dans les fichiers xml pour choisir la couleur de ses evènements
+    + Ajout d'un champ color possible dans les fichiers xml pour choisir la couleur de ses evènements
+    + Ajout d'un champ icon dans les entry du fichier xml pour ajouter une icone dans le titre (exemple calendrier lunaire)
 
 -- Yann Genevois <yann.genevois@gmail.com> Mon Apr 29 21:45:39 CEST 2013
 
